Start fixing menu food price display issue on mobile

--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@ a{
   background-color: var(--clr-text);
   display: flex;
   justify-content: space-between;
-  padding: 0.5rem 2.5rem;
+  padding: 1rem 2.5rem;
   border-radius: 16px;
 }
 
@@ -128,6 +128,7 @@ a{
   gap: 0.5rem;
   margin: 0.5rem 0;
   min-height: 5rem;
+  flex-direction: column;
 }
 
 .menu__food-item__content{
@@ -143,14 +144,15 @@ a{
 
 .menu__food-item__price{
   display: flex;
-  margin-left: auto;
+  /*! margin-left: auto; */
   gap: 0.5rem;
   flex: 0 0 auto;
 }
 
 .menu__food-item__price p{
   background-color: #D9D9D9;
-  width: 4rem;
+  padding: 1rem;
+  width: 100%;
   font-weight: 700;
   display: flex;
   justify-content: center;
@@ -158,7 +160,7 @@ a{
 }
 
 .menu__price-container{
-  display: flex;
+  display: none;
   justify-content: space-around;
   width: 13rem;
   margin-left: auto;
@@ -435,6 +437,17 @@ footer li{
 }
 
 @media all and (min-width: 48em){
+  .menu__price-container{
+    display: flex;
+  }
+  .menu__food-item{
+    flex-direction: row;
+  }
+  .menu__food-item__price p{
+    width: 4rem;
+    padding: 0rem;
+  }
+  
   .bp-1-px-1{
     padding-left: 4rem;
     padding-right: 4rem;
@@ -524,7 +537,7 @@ footer li{
 
   .menu__food-type{
     color: white; 
-    padding: 0.5rem 3rem;
+    padding: 1rem 3rem;
   }
 
   .menu__food-type h2{
